workspace = { members = ["loki-linux"] }

[package]
name = "lokinit"
version = "0.1.0"
edition = "2021"
description = "The smallest cross-platform native windowing library."
license = "MIT/Apache-2.0"
authors = ["The Loki Authors"]
keywords = ["windowing"]
categories = ["gui"]

[target.'cfg(target_os = "linux")'.dependencies]
loki-linux = { path = "./loki-linux" }

[target.'cfg(target_os = "macos")'.dependencies]
syntax = { git = "https://github.com/Bright-Shard/syntax.git" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
	"winuser",
	"hidusage",
	"libloaderapi",
	"shellscalingapi",
	"windowsx",
	"errhandlingapi",
] }
