workspace = { members = ["loki-linux", "loki-mac"] }

[package]
name = "lokinit"
version = "0.1.0"
edition = "2021"
description = "The smallest cross-platform native windowing library."
license = "MIT/Apache-2.0"
authors = ["The Loki Authors"]
keywords = ["windowing"]
categories = ["gui"]

[target.'cfg(target_os = "linux")'.dependencies]
loki-linux = { path = "./loki-linux" }

[target.'cfg(target_os = "macos")'.dependencies]
loki-mac = { path = "./loki-mac" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
	"winuser",
	"hidusage",
	"libloaderapi",
	"shellscalingapi",
	"windowsx",
	"errhandlingapi",
] }

[features]
default = ["opengl"]
opengl = []
