[package]
name = "lokinit"
version = "0.1.0"
edition = "2021"
description = "The smallest cross-platform native windowing library."
license = "MIT/Apache-2.0"
authors = ["The Loki Authors"]
keywords = ["windowing"]
categories = ["gui"]

[target.'cfg(target_os = "linux")'.dependencies]
loki-linux = { path = "./loki-linux" }

[target.'cfg(target_os = "macos")'.dependencies]
loki-mac = { path = "./loki-mac" }
objective-rust = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "hidusage",
    "libloaderapi",
    "shellscalingapi",
    "windowsx",
    "errhandlingapi",
] }

[dev-dependencies]
gl = "0.14.0"
glam = "0.25.0"
loki-draw = { git = "https://github.com/loki-chat/loki-draw.git" }

[features]
default = ["opengl"]
opengl = []

[workspace]
members = ["loki-linux", "loki-mac"]

[workspace.dependencies]
objective-rust.path = "../../objective-rust"
# objective-rust = "0.1"
